# NovelReader

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: plugin.json
.claude-plugin/: plugin.json
.claude/analyze/2026-05-27-switch-src-picker/: requirement.md  task-shared.md  task-tui-picker.md
.claude/analyze/2026-05-27-tui-reader-advanced/: goal.md  requirement.md  task-reader-buffer.md  task-reader-toc.md  test.md
.claude/archived/: wip-ddd-analysis.md
.claude/archived/2026-05-26-ddd-refactor-1779789634/: design.md  goal.md  requirement.md  setup.md  task-backup.md  task-catalog.md  task-library.md  task-presentation.md  task-shared.md  test.md
.claude/archived/2026-05-27-switch-src-picker/: design.md  goal.md  task-handler-core.md  task-library.md  task-tui-wire.md  test.md
.claude/archived/2026-05-27-tui-reader-advanced/: design.md  task-infra.md  task-reader-mouse.md
.claude/skills/add-to-shelf/: SKILL.md
.claude/skills/legado-converter/: SKILL.md
.claude/skills/parse-novel-site/: SKILL.md
book-sources/: README.md
examples/: gutenberg.json
src/: backup.rs  cli.rs  config.rs  main.rs  models.rs  reader.rs  scraper.rs  storage.rs
src/backup/: facade.rs  mod.rs
src/backup/service/: mod.rs  snapshot.rs  transport.rs
src/catalog/: dao.rs  facade.rs  mod.rs
src/catalog/service/: mod.rs  scraper.rs  source.rs
src/presentation/: cli.rs  mod.rs  reader.rs
src/presentation/handlers/: add.rs  backup.rs  config.rs  epub.rs  export.rs  import.rs  menu.rs  mod.rs  read.rs  remove.rs  (+7 more)
src/source/: mod.rs  rule.rs
src/utils/: url.rs
(+30 files in other folders)
